Emulating Numeric Types: Ex. 1-2. A simple two-dimensional vector class

--- a/01-data-model/py-data-model.ipynb
+++ b/01-data-model/py-data-model.ipynb
@@ -462,11 +462,135 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Emulating Numeric Types"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example 1-2. A simple two-dimensional vector class"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import math\n",
+    "\n",
+    "class Vector:\n",
+    "\n",
+    "    def __init__(self, x=0, y=0):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return 'Vector(%r, %r)' % (self.x, self.y)\n",
+    "\n",
+    "    def __abs__(self):\n",
+    "        return math.hypot(self.x, self.y)\n",
+    "\n",
+    "    def __bool__(self):\n",
+    "        return bool(abs(self))\n",
+    "\n",
+    "    def __add__(self, other):\n",
+    "        x = self.x + other.x\n",
+    "        y = self.y + other.y\n",
+    "        return Vector(x, y)\n",
+    "\n",
+    "    def __mul__(self, scalar):\n",
+    "        return Vector(self.x * scalar, self.y * scalar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Vector(4, 5)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v1 = Vector(2, 4)\n",
+    "v2 = Vector(2, 1)\n",
+    "v1 + v2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v = Vector(3, 4)\n",
+    "abs(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Vector(9, 12)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v * 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abs(v * 3)"
+   ]
   }
  ],
  "metadata": {
